--- a/web/css/app.css
+++ b/web/css/app.css
@@ -7,3 +7,9 @@ body{
 .container{
     background-color: rgba(0,0,0,0.1);
 }
+
+.indexMovies{
+    float: left;
+    margin-left: auto;
+    margin-right: auto;
+}
