--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -6,15 +6,58 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link href="https://fonts.googleapis.com/css?family=Anton|Roboto" rel="stylesheet">
+
     <link rel="stylesheet" href="{{ asset('bootstrap-3.3.7/dist/css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/animate.css') }}">
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 
-    <title>Document</title>
+    <title>Movies</title>
+
+
+
 </head>
 <body>
 
-    <div class="container">
+<div class="container">
+    <div class="baseHeader">
+        <a href="{{ path('app_homepage') }}" title="Website index">
+        <img id="indexLogo" src="{{ asset('img/popcorn.png') }}" alt="Logo index">
+            <div class="divIndexTitle">
+               <h1 class="indexTitle">MOVIES @ HOME</h1>
+            </div>
+        </a>
+
+
+        <nav>
+            <ul class="nav nav-pills orange">
+                <li class="active btn-menu"><a href="{{ path('app_homepage') }}">Index</a></li>
+                <li class="btn-menu"><a href="{{ path('admin_movie_list') }}">Liste des films</a></li>
+                <li class="btn-menu"><a href="{{ path('admin_movie_create') }}">Ajouter un film</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    {% for label, messages in app.flashes %}
+        <br />
+        <div class="alert alert-{{ label }}">
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+        </div>
+    {% endfor %}
+
         {% block content %} {% endblock %}
+
+        <footer>
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="{{ path('app_homepage') }}">Index</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
     </div>
 
 </body>
