--- a/src/AppBundle/Resources/views/AdminReview/edit.html.twig
+++ b/src/AppBundle/Resources/views/AdminReview/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block content %}
-    <h1>Supprimer un film</h1>
+    <h1>Modifier une critique</h1>
 
     {# afficher le formulaire #}
     {{ form(form, {'attr': {'novalidate':'novalidate'}}) }}
