--- a/src/AppBundle/Resources/views/Movie/detail.html.twig
+++ b/src/AppBundle/Resources/views/Movie/detail.html.twig
@@ -22,10 +22,29 @@
         </ul>
     </div>
 
+
+
     <div class="text-center">
         <iframe id="ytplayer" type="text/html" width="640" height="360"
                 src="http://www.youtube.com/embed/{{ movie.trailerId }}"
-                frameborder="0"/>
+                frameborder="0"></iframe>
     </div>
+
+    {% for review in movie.reviewsList %}
+    <div class="review">
+        <h5 class="reviewTitle_movieDetail">{{ review.title }}</h5>
+        <p class="reviewText">{{ review.text }}</p>
+        Note : {{ review.rating }}/10
+        <br />
+        <i>Par {{ review.username }}</i>
+    </div>
+    {% endfor %}
+
+
+    <h3>Ajouter une critique</h3>
+
+    {{ form(form, {'attr': {'novalidate':'novalidate'}}) }}
+
+
 
 {% endblock %}
