--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -33,7 +33,7 @@
             <ul class="nav nav-pills orange">
                 <li class="active btn-menu"><a href="{{ path('app_homepage') }}">Index</a></li>
                 <li class="btn-menu"><a href="{{ path('admin_movie_list') }}">Liste des films</a></li>
-                <li class="btn-menu"><a href="{{ path('admin_movie_create') }}">Ajouter un film</a></li>
+                <li class="btn-menu"><a href="{{ path('admin_review_list') }}">Liste des critiques</a></li>
             </ul>
         </nav>
     </div>
