Gestion user basique
Intégration d'un système de connexion et d'inscription simple

--- a/src/AppBundle/Resources/views/AdminReview/edit.html.twig
+++ b/src/AppBundle/Resources/views/AdminReview/edit.html.twig
@@ -7,3 +7,5 @@
     {{ form(form, {'attr': {'novalidate':'novalidate'}}) }}
 
 {% endblock %}
+
+{% block title %}Modifier une critique | {{ parent() }}{% endblock %}
