--- a/src/AppBundle/Resources/views/AdminMovie/create.html.twig
+++ b/src/AppBundle/Resources/views/AdminMovie/create.html.twig
@@ -7,3 +7,5 @@
     {{ form(form, {'attr': {'novalidate':'novalidate'}}) }}
 
 {% endblock %}
+
+{% block title %}Ajouter un film | {{ parent() }}{% endblock %}
