--- a/src/AppBundle/Resources/views/User/register.html.twig
+++ b/src/AppBundle/Resources/views/User/register.html.twig
@@ -1,11 +1,11 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block content %}
-    <h1>Modifier un film</h1>
+    <h1>Inscription</h1>
 
     {# afficher le formulaire #}
     {{ form(form, {'attr': {'novalidate':'novalidate'}}) }}
 
 {% endblock %}
 
-{% block title %}Modifier un film | {{ parent() }}{% endblock %}
+{% block title %}Inscription | {{ parent() }}{% endblock %}
