--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -33,12 +33,13 @@
             <ul class="nav nav-pills orange">
                 <li class="active btn-menu"><a href="{{ path('app_homepage') }}">Index</a></li>
                 {% if app.user %}
-                    {% if app.user.roles == "ROLE_ADMIN" %}
+                    {% if "ROLE_ADMIN" in app.user.roles %}
                         <li class="btn-menu"><a href="{{ path('admin_movie_list') }}">Liste des films</a></li>
                         <li class="btn-menu"><a href="{{ path('admin_review_list') }}">Liste des critiques</a></li>
-                    {% else %}
-                        <li><a href="{{ path('logout') }}">Déconnexion ({{ app.user.username }})</a></li>
+                        <li class="btn-menu"><a href="{{ path('admin_user_list') }}">Liste des utilisateurs</a></li>
                     {% endif %}
+                    <li class="btn-menu"><a href="{{ path('user_watched_movies') }}">Films à regarder</a></li>
+                    <li><a href="{{ path('logout') }}">Déconnexion ({{ app.user.username }})</a></li>
                 {% else %}
                     <li><a href="{{ path('login') }}">Connexion</a></li>
                     <li><a href="{{ path('user_register') }}">Inscription</a></li>
